# Projects

./: .gitignore  README.md
Arduino/: Arduino Giga projects codes.docx  Arduino Uno projects codes.docx
C++/: Blackjack.cpp  Calculator.cpp  Tic hw 4-1.cpp
C++/C++ courses/2-1-1/: main.cpp
C++/C++ courses/2-1-2/: main.cpp
C++/C++ courses/2-1-3/: main.cpp
C++/C++ courses/2-1-4/: main.cpp
C++/C++ courses/2-1-hw/: main.cpp
C++/C++ courses/2-2-1/: main.cpp
C++/C++ courses/2-2-2/: main.cpp
C++/C++ courses/2-2-3/: main.cpp
C++/C++ courses/2-2-4/: main.cpp
C++/C++ courses/2-2-hw/: main.cpp
C++/C++ courses/2-3-1/: main.cpp
C++/C++ courses/2-3-2/: main.cpp
C++/C++ courses/2-3-3/: main.cpp
C++/C++ courses/2-3-4/: main.cpp
C++/C++ courses/2-3-hw/: main.cpp
C++/C++ courses/2-4-1/: main.cpp
C++/C++ courses/2-4-2/: main.cpp
C++/C++ courses/2-4-3/: main.cpp
HTML/: image.html  index.html  leson.html  yipee.html
JS/: sqrt.js
Java/Java courses/: AA1.java  AA2.java  AB1.java  AB2.java  AC1.java  AD1.java  AE1.java  AEcli.java  AF1!!!.java  AFbook.java  AFlib.java  AG1.java  AGsubclass.java  AGsuperclass.java  AH1.java  AH2.java  AH3.java  AH4.java  AH41.java  AH42.java  AH4F.java  AH4M.java  test.java
PHP/: the basics.php
Phyton/: Calculator.py  Circle area calculator.py  Number guesser.py  Pair number checker.py  error ahh program.py  first lesson.py  idk.py  tictactoe.py
Rust/: tutorial.txt
Rust/basics/: Cargo.toml
Rust/math_library/: Cargo.toml  README.md
Rust/math_library/src/: lib.rs
Rust/usinglibs/: Cargo.toml
(+101 files in other folders)
